src/main/gen/com/bloxbean/intelliada/idea/language/helios/parser/HeliosParser.java
// This is a generated file. Not intended for manual editing.
package com.bloxbean.intelliada.idea.language.helios.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.bloxbean.intelliada.idea.language.helios.psi.HeliosTypes.*;
import static com.bloxbean.intelliada.idea.language.helios.psi.impl.HeliosParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class HeliosParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Program(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ASSIGN_EXPR, BINARY_EXPR, CALL_EXPR, FUNC_LITERAL_EXPR,
      FUNC_TYPE_EXPR, IF_ELSE_EXPR, LIST_LITERAL_EXPR, LIST_TYPE_EXPR,
      LITERAL_EXPR, MAP_LITERAL_EXPR, MAP_TYPE_EXPR, MEMBER_EXPR,
      NON_FUNC_TYPE_EXPR, OPTION_TYPE_EXPR, PARENS_EXPR, PRIMITIVE_LITERAL_EXPR,
      PRINT_EXPR, STRUCT_LITERAL_EXPR, SWITCH_EXPR, TYPE_EXPR,
      TYPE_PATH_EXPR, TYPE_REF_EXPR, UNARY_EXPR, VALUE_EXPR,
      VALUE_PATH_EXPR, VALUE_REF_EXPR),
  };

  /* ********************************************************** */
  // '+' | '-' | '*' | '/' | '%' | '==' | '!=' | '<' | '>' | '<=' | '>=' | '||' | '&&'
  public static boolean BinaryOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BinaryOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BINARY_OP, "<binary op>");
    r = consumeToken(b, "+");
    if (!r) r = consumeToken(b, "-");
    if (!r) r = consumeToken(b, "*");
    if (!r) r = consumeToken(b, "/");
    if (!r) r = consumeToken(b, "%");
    if (!r) r = consumeToken(b, "==");
    if (!r) r = consumeToken(b, "!=");
    if (!r) r = consumeToken(b, "<");
    if (!r) r = consumeToken(b, ">");
    if (!r) r = consumeToken(b, "<=");
    if (!r) r = consumeToken(b, ">=");
    if (!r) r = consumeToken(b, "||");
    if (!r) r = consumeToken(b, "&&");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'true' | 'false'
  public static boolean BoolLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BoolLiteral")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_LITERAL, "<bool literal>");
    r = consumeToken(b, "true");
    if (!r) r = consumeToken(b, "false");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '#' 'regexp:[0-9a-f]*'
  public static boolean ByteArrayLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ByteArrayLiteral")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BYTE_ARRAY_LITERAL, "<byte array literal>");
    r = consumeToken(b, "#");
    r = r && consumeToken(b, "regexp:[0-9a-f]*");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'regexp://.*\n' | 'regexp:/\*(.*|\n)\*/'
  public static boolean Comment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Comment")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMENT, "<comment>");
    r = consumeToken(b, LINE_COMMENT);
    if (!r) r = consumeToken(b, "regexp:/\\*(.*|\\n)\\*/");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'const' Identifier [':' TypeExpr] '=' ValueExpr
  public static boolean ConstStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_STATEMENT, "<const statement>");
    r = consumeToken(b, "const");
    r = r && Identifier(b, l + 1);
    r = r && ConstStatement_2(b, l + 1);
    r = r && consumeToken(b, "=");
    r = r && ValueExpr(b, l + 1, -1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [':' TypeExpr]
  private static boolean ConstStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstStatement_2")) return false;
    ConstStatement_2_0(b, l + 1);
    return true;
  }

  // ':' TypeExpr
  private static boolean ConstStatement_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ConstStatement_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ":");
    r = r && TypeExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // DataField (DataField)*
  public static boolean DataDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataDefinition")) return false;
    if (!nextTokenIs(b, T_WORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DataField(b, l + 1);
    r = r && DataDefinition_1(b, l + 1);
    exit_section_(b, m, DATA_DEFINITION, r);
    return r;
  }

  // (DataField)*
  private static boolean DataDefinition_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataDefinition_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!DataDefinition_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DataDefinition_1", c)) break;
    }
    return true;
  }

  // (DataField)
  private static boolean DataDefinition_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataDefinition_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DataField(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // NameTypePair
  public static boolean DataField(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DataField")) return false;
    if (!nextTokenIs(b, T_WORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = NameTypePair(b, l + 1);
    exit_section_(b, m, DATA_FIELD, r);
    return r;
  }

  /* ********************************************************** */
  // Word ['{' DataDefinition '}']
  public static boolean EnumMember(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumMember")) return false;
    if (!nextTokenIs(b, T_WORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Word(b, l + 1);
    r = r && EnumMember_1(b, l + 1);
    exit_section_(b, m, ENUM_MEMBER, r);
    return r;
  }

  // ['{' DataDefinition '}']
  private static boolean EnumMember_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumMember_1")) return false;
    EnumMember_1_0(b, l + 1);
    return true;
  }

  // '{' DataDefinition '}'
  private static boolean EnumMember_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumMember_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "{");
    r = r && DataDefinition(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'enum' Identifier '{' EnumMember (EnumMember)* [ImplDefinition] '}'
  public static boolean EnumStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_STATEMENT, "<enum statement>");
    r = consumeToken(b, "enum");
    r = r && Identifier(b, l + 1);
    r = r && consumeToken(b, "{");
    r = r && EnumMember(b, l + 1);
    r = r && EnumStatement_4(b, l + 1);
    r = r && EnumStatement_5(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (EnumMember)*
  private static boolean EnumStatement_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumStatement_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!EnumStatement_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumStatement_4", c)) break;
    }
    return true;
  }

  // (EnumMember)
  private static boolean EnumStatement_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumStatement_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = EnumMember(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ImplDefinition]
  private static boolean EnumStatement_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumStatement_5")) return false;
    ImplDefinition(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // NameTypePair
  public static boolean FuncArg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncArg")) return false;
    if (!nextTokenIs(b, T_WORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = NameTypePair(b, l + 1);
    exit_section_(b, m, FUNC_ARG, r);
    return r;
  }

  /* ********************************************************** */
  // '(' [FuncArg (',' FuncArc)*] ')' '->' TypeExpr '{' ValueExpr '}'
  public static boolean FuncLiteralExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncLiteralExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNC_LITERAL_EXPR, "<func literal expr>");
    r = consumeToken(b, "(");
    r = r && FuncLiteralExpr_1(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "->");
    r = r && TypeExpr(b, l + 1);
    r = r && consumeToken(b, "{");
    r = r && ValueExpr(b, l + 1, -1);
    r = r && consumeToken(b, "}");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [FuncArg (',' FuncArc)*]
  private static boolean FuncLiteralExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncLiteralExpr_1")) return false;
    FuncLiteralExpr_1_0(b, l + 1);
    return true;
  }

  // FuncArg (',' FuncArc)*
  private static boolean FuncLiteralExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncLiteralExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FuncArg(b, l + 1);
    r = r && FuncLiteralExpr_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' FuncArc)*
  private static boolean FuncLiteralExpr_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncLiteralExpr_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FuncLiteralExpr_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FuncLiteralExpr_1_0_1", c)) break;
    }
    return true;
  }

  // ',' FuncArc
  private static boolean FuncLiteralExpr_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncLiteralExpr_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && consumeToken(b, FUNCARC);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // FUNC Identifier '(' [FuncArg (',' FuncArg)*] ')' '->' TypeExpr '{' ValueExpr '}'
  public static boolean FuncStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncStatement")) return false;
    if (!nextTokenIs(b, FUNC)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FUNC);
    r = r && Identifier(b, l + 1);
    r = r && consumeToken(b, "(");
    r = r && FuncStatement_3(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "->");
    r = r && TypeExpr(b, l + 1);
    r = r && consumeToken(b, "{");
    r = r && ValueExpr(b, l + 1, -1);
    r = r && consumeToken(b, "}");
    exit_section_(b, m, FUNC_STATEMENT, r);
    return r;
  }

  // [FuncArg (',' FuncArg)*]
  private static boolean FuncStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncStatement_3")) return false;
    FuncStatement_3_0(b, l + 1);
    return true;
  }

  // FuncArg (',' FuncArg)*
  private static boolean FuncStatement_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncStatement_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = FuncArg(b, l + 1);
    r = r && FuncStatement_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' FuncArg)*
  private static boolean FuncStatement_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncStatement_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FuncStatement_3_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FuncStatement_3_0_1", c)) break;
    }
    return true;
  }

  // ',' FuncArg
  private static boolean FuncStatement_3_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncStatement_3_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && FuncArg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '(' [TypeExpr (',' TypeExpr)*] ')' '->' TypeExpr
  public static boolean FuncTypeExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncTypeExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUNC_TYPE_EXPR, "<func type expr>");
    r = consumeToken(b, "(");
    r = r && FuncTypeExpr_1(b, l + 1);
    r = r && consumeToken(b, ")");
    r = r && consumeToken(b, "->");
    r = r && TypeExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [TypeExpr (',' TypeExpr)*]
  private static boolean FuncTypeExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncTypeExpr_1")) return false;
    FuncTypeExpr_1_0(b, l + 1);
    return true;
  }

  // TypeExpr (',' TypeExpr)*
  private static boolean FuncTypeExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncTypeExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = TypeExpr(b, l + 1);
    r = r && FuncTypeExpr_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' TypeExpr)*
  private static boolean FuncTypeExpr_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncTypeExpr_1_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!FuncTypeExpr_1_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "FuncTypeExpr_1_0_1", c)) break;
    }
    return true;
  }

  // ',' TypeExpr
  private static boolean FuncTypeExpr_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "FuncTypeExpr_1_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && TypeExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Word
  public static boolean Identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier")) return false;
    if (!nextTokenIs(b, T_WORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Word(b, l + 1);
    exit_section_(b, m, IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // ImplMember (ImplMember)*
  public static boolean ImplDefinition(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImplDefinition")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPL_DEFINITION, "<impl definition>");
    r = ImplMember(b, l + 1);
    r = r && ImplDefinition_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (ImplMember)*
  private static boolean ImplDefinition_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImplDefinition_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ImplDefinition_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ImplDefinition_1", c)) break;
    }
    return true;
  }

  // (ImplMember)
  private static boolean ImplDefinition_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImplDefinition_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ImplMember(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ConstStatement | FuncStatement
  public static boolean ImplMember(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImplMember")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPL_MEMBER, "<impl member>");
    r = ConstStatement(b, l + 1);
    if (!r) r = FuncStatement(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Word ['as' Word]
  public static boolean ImportField(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportField")) return false;
    if (!nextTokenIs(b, T_WORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Word(b, l + 1);
    r = r && ImportField_1(b, l + 1);
    exit_section_(b, m, IMPORT_FIELD, r);
    return r;
  }

  // ['as' Word]
  private static boolean ImportField_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportField_1")) return false;
    ImportField_1_0(b, l + 1);
    return true;
  }

  // 'as' Word
  private static boolean ImportField_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportField_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, "as");
    r = r && Word(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'import' '{' ImportField (',' ImportField)* '}' 'from' ModuleName
  public static boolean ImportStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportStatement")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_STATEMENT, "<import statement>");
    r = consumeToken(b, "import");
    r = r && consumeToken(b, "{");
    r = r && ImportField(b, l + 1);
    r = r && ImportStatement_3(b, l + 1);
    r = r && consumeToken(b, "}");
    r = r && consumeToken(b, "from");
    r = r && ModuleName(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' ImportField)*
  private static boolean ImportStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportStatement_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ImportStatement_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ImportStatement_3", c)) break;
    }
    return true;
  }

  // ',' ImportField
  private static boolean ImportStatement_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportStatement_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && ImportField(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'regexp:[0-9]+' | 'regexp:0b[0-1]+' | 'regexp:0o[0-7]+' | 'regexp:0x[0-9a-f]+'
  public static boolean IntLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "IntLiteral")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INT_LITERAL, "<int literal>");
    r = consumeToken(b, "regexp:[0-9]+");
    if (!r) r = consumeToken(b, "regexp:0b[0-1]+");
    if (!r) r = consumeToken(b, "regexp:0o[0-7]+");
    if (!r) r = consumeToken(b, "regexp:0x[0-9a-f]+");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '[]' TypeExpr '{' [ValueExpr] (',' ValueExpr)* '}'
  public static boolean ListLiteralExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListLiteralExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LIST_LITERAL_EXPR, "<list literal expr>");
    r = consumeToken(b, "[]");
    r = r && TypeExpr(b, l + 1);
    r = r && consumeToken(b, "{");
    r = r && ListLiteralExpr_3(b, l + 1);
    r = r && ListLiteralExpr_4(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ValueExpr]
  private static boolean ListLiteralExpr_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListLiteralExpr_3")) return false;
    ValueExpr(b, l + 1, -1);
    return true;
  }

  // (',' ValueExpr)*
  private static boolean ListLiteralExpr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListLiteralExpr_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ListLiteralExpr_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ListLiteralExpr_4", c)) break;
    }
    return true;
  }

  // ',' ValueExpr
  private static boolean ListLiteralExpr_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListLiteralExpr_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && ValueExpr(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '[' ']' NonFuncTypeExpr
  public static boolean ListTypeExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ListTypeExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LIST_TYPE_EXPR, "<list type expr>");
    r = consumeToken(b, "[");
    r = r && consumeToken(b, "]");
    r = r && NonFuncTypeExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'Map' '[' TypeExpr ']' TypeExpr '{' [ValueExpr ':' ValueExpr] (',' ValueExpr ':' ValueExpr)* '}'
  public static boolean MapLiteralExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MapLiteralExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, MAP_LITERAL_EXPR, "<map literal expr>");
    r = consumeToken(b, "Map");
    r = r && consumeToken(b, "[");
    r = r && TypeExpr(b, l + 1);
    r = r && consumeToken(b, "]");
    r = r && TypeExpr(b, l + 1);
    r = r && consumeToken(b, "{");
    r = r && MapLiteralExpr_6(b, l + 1);
    r = r && MapLiteralExpr_7(b, l + 1);
    r = r && consumeToken(b, "}");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ValueExpr ':' ValueExpr]
  private static boolean MapLiteralExpr_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MapLiteralExpr_6")) return false;
    MapLiteralExpr_6_0(b, l + 1);
    return true;
  }

  // ValueExpr ':' ValueExpr
  private static boolean MapLiteralExpr_6_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "MapLiteralExpr_6_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ValueExpr(b, l + 1, -1);
    r = r && consumeToken(b, ":");
    r = r && ValueExpr(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }
